--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "vitest": "^0.23.4"
   }
 }
-
